--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,19 @@
     <artifactId>game-upgradation</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.0</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
     <name>game-upgradation</name>
     <url>http://maven.apache.org</url>
     <modules>
         <module>game-server</module>
         <module>game-user</module>
         <module>game-common</module>
+        <module>game-dao</module>
     </modules>
 
     <properties>
@@ -68,6 +74,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>3.4.0</version>
+            </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
