--- a/game-cocos/game-up/settings/v2/packages/project.json
+++ b/game-cocos/game-up/settings/v2/packages/project.json
@@ -1,3 +1,11 @@
 {
-  "__version__": "1.0.6"
+  "__version__": "1.0.6",
+  "general": {
+    "designResolution": {
+      "width": 430,
+      "height": 930,
+      "fitHeight": true
+    }
+  },
+  "custom_joint_texture_layouts": []
 }
