03:调试获取个人信息和跳场景不断连接

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ build/
 #///////////////////////////
 /game-cocos/game-up/library/
 /game-cocos/game-up/temp/
+/game-cocos/game-up/.history/
 /game-cocos/game-up/local/
 /game-cocos/game-up/build/
 /game-cocos/game-up/profiles/
